--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="app">
             <h2>Webinar Free CFP</h2>
             <p>Trova webinar gratuiti che riconoscono CFP.</p>
-            <a href="https://play.google.com/store/apps/details?id=com.fbssimtools.webinarfreecfp" target="_blank">Scopri di più</a>
+            <a href="https://play.google.com/store/apps/details?id=com.fbssimtools.webinar" target="_blank">Scopri di più</a>
         </div>
     </section>
     <footer>
