--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <p>Trova webinar gratuiti che riconoscono CFP.</p>
             <a href="https://play.google.com/store/apps/details?id=com.fbssimtools.webinair" target="_blank">Scopri di più</a>
         </div>
+        <div class="app">
+           <h2>A320 Checklist Voice DEMO</h2>
+            <p>Un'app indispensabile per i piloti virtuali!</p>
+            <a href="https://play.google.com/store/apps/details?id=com.fbssimtools.a320checklistvoice.demo" target="_blank">Scopri di più</a>
+        </div>
     </section>
     <footer>
         <p>&copy; 2025 Fabio. Tutti i diritti riservati.</p>
