--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2025 Fabio. Tutti i diritti riservati.</p>
+        <p>&copy; 2025 Fabio Busalacchi. Tutti i diritti riservati.</p>
     </footer>
 </body>
 </html>
