--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <p>Scopri le mie app disponibili su Google Play.</p>
     </header>
     <section>
+         <div class="app">
+           <h2>A320 Checklist Voice DEMO</h2>
+            <p>Un'app indispensabile per i piloti virtuali!</p>
+            <a href="https://play.google.com/store/apps/details?id=com.fbssimtools.a320checklistvoice.demo" target="_blank">Scopri di più</a>
+        </div>
         <div class="app">
             <h2>A320 Checklist Voice</h2>
             <p>Un'app indispensabile per i piloti virtuali!</p>
